# note-connector

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.json
.github/workflows/: release.yml  test.yml
chatgpt/: README.md  build.js  package-lock.json  package.json  tsconfig.json
chatgpt/src/: bin.ts  chatgpt-setup.ts  config.test.ts  config.ts  daemon-state.ts  daemon-worker.ts  daemon.ts  net.test.ts  net.ts  note-auth.ts  onboarding.ts  paths.ts  runtime.ts  setup-dependencies.ts  shared-router-daemon.ts  shared-router.ts  spawn-python.ts  util.ts  version.test.ts  version.ts
chatgpt/src/tunnel/: manager.ts  tailscale.ts
chatgpt/src/widgets/: runtime-parse.ts
docs/api/: reference.md
docs/development/: release.md  testing.md
docs/guide/: chatgpt-connector.md  images.md
docs/superpowers/specs/: 2026-06-27-chatgpt-connector-design.md
scripts/: sync-versions.mjs
specs/001-e2e-native-html-validation/: spec.md
src/note_mcp/: models.py  server.py
src/note_mcp/api/: __init__.py  articles.py  embeds.py  images.py  openai_file_images.py  public_notes.py
src/note_mcp/chatgpt/: __init__.py  __main__.py  access_log.py  auth.py  images.py  login_once.py  middleware.py  tools.py  widgets.py
tests/contract/: test_chatgpt_tools.py  test_mcp_tools.py
tests/e2e/: test_mcp_tools.py
tests/unit/: test_chatgpt_auth.py  test_chatgpt_images.py  test_embeds.py  test_eyecatch_base64.py  test_images.py  test_markdown_to_html.py  test_openai_file_images.py  test_public_notes.py
