[project]
name = "note-connector"
version = "0.2.0"
description = "note-connector: MCP server and ChatGPT connector for note.com"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["mcp", "note.com", "blog", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "playwright>=1.40.0",
    "keyring>=25.0.0",
    "httpx>=0.27.0",
    "markdown-it-py>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.12.0",
    "mitmproxy>=11.0.2",
    "mypy>=1.19.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.4",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0.0",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/note_mcp"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["tests/manual"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["note_mcp"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["^debug/", "^tests/manual/"]

[[tool.mypy.overrides]]
module = "mitmproxy.*"
ignore_errors = true
follow_imports = "skip"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_auth: tests requiring real authentication",
    "e2e: end-to-end tests",
    "docker: tests requiring Docker environment with browser/proxy",
    "playwright: tests requiring Playwright browser automation",
]
